--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -8,6 +8,7 @@
 @import 'subpages/productPage';
 @import 'subpages/404';
 @import 'subpages/about';
+@import 'subpages/about-old';
 @import 'subpages/calculator';
 @import 'subpages/blog';
 @import 'subpages/cart';
