--- a/css/custom.css
+++ b/css/custom.css
@@ -1878,7 +1878,7 @@ body.postid-21695 .productTesVid__video .thumb {
 .aboutHeader__wrap h1 {
   font-size: 48px;
   line-height: 58px;
-  margin: -150px 0 0;
+  margin: 0;
   color: #000;
 }
 
@@ -2056,6 +2056,7 @@ body.postid-21695 .productTesVid__video .thumb {
   .aboutContent__text {
     width: 100% !important;
     margin: 0 0 35px;
+    text-align: center;
   }
   .aboutContent__image {
     width: 100%;
@@ -2330,6 +2331,7 @@ body.postid-21695 .productTesVid__video .thumb {
   .aboutParts__box .content {
     max-width: 100%;
     margin: 0 0 160px;
+    text-align: center;
   }
   .aboutParts__box .image {
     right: auto;
@@ -2350,7 +2352,9 @@ body.postid-21695 .productTesVid__video .thumb {
 }
 
 .aboutLead {
-  margin: 80px 0;
+  padding: 50px 0 40px;
+  margin: 50px 35px 10px;
+  border-top: 1px solid #dbdbdb;
 }
 
 .aboutLead h2 {
@@ -2362,9 +2366,6 @@ body.postid-21695 .productTesVid__video .thumb {
 }
 
 @media (max-width: 991px) {
-  .aboutLead {
-    margin: 50px 0 40px;
-  }
   .aboutLead h2 {
     font-size: 28px;
     line-height: 34px;
