--- a/sass/subpages/_about.scss
+++ b/sass/subpages/_about.scss
@@ -369,6 +369,7 @@
         .content{
             width: 100%;
             max-width: 470px;
+            margin-bottom: 100px;
 
             h2{
                 font-size: 36px;
@@ -425,6 +426,7 @@
 
             .content{
                 max-width: 480px;
+                margin-bottom: 0;
 
                 h2{
                     font-size: 28px;
