--- a/css/custom.css
+++ b/css/custom.css
@@ -6801,6 +6801,14 @@ body.woocommerce-account .entry-header {
   background-color: #fff;
 }
 
+.logosList__heading {
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 500;
+  text-align: center;
+  margin: 0 0 15px;
+}
+
 .logosList__list {
   display: flex;
   justify-content: center;
