--- a/sass/sections/_logosList.scss
+++ b/sass/sections/_logosList.scss
@@ -2,6 +2,14 @@
     padding: 25px 0;
     background-color: #fff;
 
+    &__heading{
+        font-size: 24px;
+        line-height: 32px;
+        font-weight: 500;
+        text-align: center;
+        margin: 0 0 15px;
+    }
+
     &__list{
         display: flex;
         justify-content: center;
