--- a/css/custom.css
+++ b/css/custom.css
@@ -5020,6 +5020,236 @@ body.woocommerce-account .entry-header {
   }
 }
 
+/**
+ *  Lost password page
+ */
+body.woocommerce-lost-password .woocommerce-message,
+body.woocommerce-account .woocommerce-message {
+  max-width: 1000px;
+  margin: 90px auto 0;
+  border-radius: 5px;
+  color: #fff;
+  padding: 10px 15px;
+}
+
+body.woocommerce-lost-password .woocommerce-notices-wrapper,
+body.woocommerce-account .woocommerce-notices-wrapper {
+  display: block !important;
+}
+
+body.woocommerce-lost-password .woocommerce-notices-wrapper .woocommerce-error,
+body.woocommerce-account .woocommerce-notices-wrapper .woocommerce-error {
+  max-width: 1000px;
+  margin: 90px auto 0;
+  border-radius: 5px;
+  color: #fff;
+  padding: 10px 15px;
+  list-style: none;
+}
+
+body.woocommerce-lost-password .woocommerce-notices-wrapper .woocommerce-error a,
+body.woocommerce-account .woocommerce-notices-wrapper .woocommerce-error a {
+  color: #fff;
+  font-weight: 500;
+  text-decoration: underline;
+  cursor: pointer;
+  transition: ease .3s;
+}
+
+body.woocommerce-lost-password .woocommerce-notices-wrapper .woocommerce-error a:hover,
+body.woocommerce-account .woocommerce-notices-wrapper .woocommerce-error a:hover {
+  opacity: .8;
+}
+
+.lostPassPage {
+  padding: 80px 0;
+}
+
+.lostPassPage__heading {
+  font-size: 30px;
+  line-height: 36px;
+  color: #000;
+  font-weight: 500;
+  text-align: center;
+  margin: 0 0 20px;
+}
+
+.lostPassPage__form {
+  max-width: 600px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+.lostPassPage__form p {
+  font-size: 14px;
+  line-height: 20px;
+  color: #000;
+  text-align: center;
+  margin: 0 0 20px;
+}
+
+.lostPassPage__form input[name="user_login"] {
+  max-width: 320px;
+  width: 100%;
+  height: 45px;
+  font-size: 14px;
+  color: #000;
+  border: 1px solid #838383;
+  background-color: #fff;
+  border-radius: 0;
+  text-align: center;
+  transition: ease .3s;
+  outline: none;
+}
+
+.lostPassPage__form input[name="user_login"]::placeholder {
+  color: #838383;
+}
+
+.lostPassPage__form input[name="user_login"]:focus {
+  border-color: #000;
+}
+
+.lostPassPage__form button.button {
+  padding: 0 20px;
+  height: 45px;
+  background-color: #44c680;
+  border: 0;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: 25px;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  outline: none;
+  transition: ease .3s;
+}
+
+.lostPassPage__form button.button:hover {
+  opacity: .7;
+}
+
+.lostPassConfirmation {
+  padding: 40px 20px 80px;
+}
+
+.lostPassConfirmation p {
+  font-size: 14px;
+  line-height: 20px;
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.lostPassReset {
+  padding: 80px 0;
+}
+
+.lostPassReset__heading {
+  font-size: 30px;
+  line-height: 36px;
+  color: #000;
+  font-weight: 500;
+  text-align: center;
+  margin: 0 0 20px;
+}
+
+.lostPassReset__form {
+  max-width: 600px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+.lostPassReset__form p {
+  font-size: 14px;
+  line-height: 20px;
+  color: #000;
+  text-align: center;
+  margin: 0 0 20px;
+}
+
+.lostPassReset__form p.woocommerce-form-row {
+  margin: 0 0 10px;
+}
+
+.lostPassReset__form p.woocommerce-form-row .woocommerce-password-strength {
+  text-align: center;
+  margin-top: 10px;
+  font-weight: 400;
+  background: #f77e63;
+  padding: 5px 10px;
+  color: #fff;
+  border-radius: 5px;
+  max-width: 320px;
+  margin: 10px auto;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.lostPassReset__form p.woocommerce-form-row .woocommerce-password-strength.bad {
+  background: #f77e63;
+}
+
+.lostPassReset__form p.woocommerce-form-row .woocommerce-password-strength.good {
+  background: #f7ae41;
+}
+
+.lostPassReset__form p.woocommerce-form-row .woocommerce-password-strength.strong {
+  background: #44c680;
+}
+
+.lostPassReset__form p.woocommerce-form-row .woocommerce-password-hint {
+  font-size: 10px;
+  line-height: 14px;
+  display: block;
+  text-align: center;
+  max-width: 320px;
+  margin: 0 auto;
+}
+
+.lostPassReset__form input {
+  max-width: 320px;
+  width: 100%;
+  height: 45px;
+  font-size: 14px;
+  color: #000;
+  border: 1px solid #838383;
+  background-color: #fff;
+  border-radius: 0;
+  text-align: center;
+  transition: ease .3s;
+  outline: none;
+}
+
+.lostPassReset__form input::placeholder {
+  color: #838383;
+}
+
+.lostPassReset__form input:focus {
+  border-color: #000;
+}
+
+.lostPassReset__form button.button {
+  padding: 0 20px;
+  height: 45px;
+  background-color: #44c680;
+  border: 0;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: 25px;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  outline: none;
+  transition: ease .3s;
+}
+
+.lostPassReset__form button.button:hover {
+  opacity: .7;
+}
+
 #customer_login {
   display: flex;
   justify-content: space-between;
