--- a/sass/subpages/_productPage.scss
+++ b/sass/subpages/_productPage.scss
@@ -410,6 +410,14 @@ body.postid-21695{
                 padding: 25px 20px;
                 border-top: 1px solid #E6E6E6;
 
+                &.not-available{
+                    opacity: .3;
+
+                    .vpe-qty-td{
+                        font-size: 14px;
+                    }
+                }
+
                 .vpe-img-td{
                     .variation-image-id{
                         display: none !important;
